Tried to fix the alert pop up on mobile. The close button was not visibile.

--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@
     border: 0;
     padding: 0;
     margin: 0;
+    inline-size: max-content;
     transition: all 0.2s ease-in-out;
 }
 .icon-alert *  {
